--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,25 +18,25 @@ theme:
     # - navigation.sections # 这里打开，目录就显示为灰色，不会有展开的箭头，里面的内容会一直显示在左边栏
     # - navigation.expand # 左边侧栏目录结构自动展开
     - navigation.instant
-    - navigation.tabs # 这里打开可以多一行，选项卡一栏
-    - navigation.tabs.sticky # 滚动的时候选项卡也保持可见
-    - navigation.path
-    - navigation.instant.prefetch
-    - navigation.instant.progress
-    - navigation.tracking
-    - navigation.prune
-    - navigation.indexes
-    - navigation.top
-    - navigation.footer
-    # - toc.integrate # 打开之后，文件的结构，嵌入在左侧的目录结构里面，不打开就在右侧
+    # - navigation.tabs # 这里打开可以多一行，选项卡一栏
+    # - navigation.tabs.sticky # 滚动的时候选项卡也保持可见
+    # - navigation.path
+    # - navigation.instant.prefetch
+    # - navigation.instant.progress
+    # - navigation.tracking
+    # - navigation.prune
+    # - navigation.indexes
+    # - navigation.top
+    # - navigation.footer
+    # # - toc.integrate # 打开之后，文件的结构，嵌入在左侧的目录结构里面，不打开就在右侧
     # - toc.follow
-    - search.suggest
-    - search.highlight
-    - search.share
-    - content.tabs.link
-    - content.code.annotation
-    - header.autohide
-    - announce.dismiss
+    # - search.suggest
+    # - search.highlight
+    # - search.share
+    # - content.tabs.link
+    # - content.code.annotation
+    # - header.autohide
+    # - announce.dismiss
 
   language: zh
 
