--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,7 +15,7 @@ theme:
     logo: material/numeric-9-box
   features:
     - content.code.copy
-    # - navigation.sections # 这里打开，目录就显示为灰色，不会有展开的箭头，里面的内容会一直显示在左边栏
+    - navigation.sections # 这里打开，目录就显示为灰色，不会有展开的箭头，里面的内容会一直显示在左边栏
     # - navigation.expand # 左边侧栏目录结构自动展开
     - navigation.instant
     # - navigation.tabs # 这里打开可以多一行，选项卡一栏
@@ -38,7 +38,7 @@ theme:
     # - header.autohide
     # - announce.dismiss
 
-  language: zh
+  # language: zh
 
   palette:
     - scheme: slate  # 这里可以设置网站的默认颜色，有两个值可以选择，default 和 slate，浅色模式（称为 default ）和深色模式（称为 slate ）https://squidfunk.github.io/mkdocs-material/setup/changing-the-colors/#color-scheme 哪组在前面，默认就是那种配色
@@ -46,13 +46,13 @@ theme:
         icon: material/toggle-switch
         name: Switch to light mode    
       # primary: red # 这里设置 标题、侧边栏、文本链接和其他一些组件 的颜色 https://squidfunk.github.io/mkdocs-material/setup/changing-the-colors/#primary-color
-      accent: deep orange # 强调色用于表示可以交互的元素，例如悬停链接、按钮和滚动条  https://squidfunk.github.io/mkdocs-material/setup/changing-the-colors/#accent-color
+      # accent: deep orange # 强调色用于表示可以交互的元素，例如悬停链接、按钮和滚动条  https://squidfunk.github.io/mkdocs-material/setup/changing-the-colors/#accent-color
     - scheme: default
       toggle:
         icon: material/toggle-switch-off-outline 
         name: Switch to dark mode
       # primary: teal
-      accent: purple 
+      # accent: purple 
 
 plugins:
   - search
