--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,8 +15,20 @@ theme:
     logo: material/numeric-9-box
   features:
     - content.code.copy
-    - navigation.sections
+    - navigation.sections # 这里打开，目录就显示为灰色，不会有展开的箭头，里面的内容会一直显示在左边栏
     - navigation.instant
+    - navigation.expand # 左边侧栏目录结构自动展开
+    - navigation.tabs # 这里打开可以多一行，选项卡一栏
+    - navigation.tabs.sticky # 滚动的时候选项卡也保持可见
+    - navigation.path
+    - navigation.instant.prefetch
+    - navigation.instant.progress
+    - navigation.tracking
+    - navigation.prune
+    - navigation.indexes
+    - navigation.top
+    - navigation.footer
+
   palette: 
     - scheme: default
       toggle:
